--- a/style.css
+++ b/style.css
@@ -12,12 +12,17 @@ body {
 
 input {
   width: 100%;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px;
   box-sizing: border-box;
+  border: 1px solid #5f9341;
+  margin-bottom: 4px;
 }
 
 button {
   background-color: #5f9341;
-  margin-top: 5px;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  font-weight: bold;
+  
 }
