--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   
 }
 
+/*
 input {
   width: 100%;
   padding: 10px;
@@ -17,12 +18,14 @@ input {
   border: 1px solid #5f9341;
   margin-bottom: 4px;
 }
+*/
 
 button {
   background-color: #5f9341;
   color: white;
-  padding: 10px 20px;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
   border: none;
   font-weight: bold;
-  
 }
