--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
   
 }
 
-/*
 input {
   width: 100%;
   padding: 10px;
@@ -18,14 +17,11 @@ input {
   border: 1px solid #5f9341;
   margin-bottom: 4px;
 }
-*/
 
 button {
   background-color: #5f9341;
   color: white;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
+  padding: 10px 20px;
   border: none;
   font-weight: bold;
 }
