--- a/style.css
+++ b/style.css
@@ -25,3 +25,18 @@ button {
   border: none;
   font-weight: bold;
 }
+
+ul{
+  margin-top: 20px;;
+  list-style-type: none;
+  padding-left: 0;
+}
+
+li {
+  margin-top: 5px;
+  margin: 0;  
+}
+
+a {
+  color:#5f9341;
+}
